cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_COMPILER arm-linux-gnueabihf-g++)
# set(CMAKE_CXX_COMPILER g++)
set(CXX_FLAGS -O2 -MMD -march=armv7-a -marm -mfpu=neon -O3 -g)

project(compress-tool-benchmark-arm)
include_directories(deps/zlib-1.2.11/include)
link_directories(deps/zlib-1.2.11/lib)
include_directories(deps/lz4)
link_directories(deps/lz4)
include_directories(deps/snappy/include)
link_directories(deps/snappy/lib)

add_executable(compress compress.cpp)
target_link_libraries(compress libz.a liblz4.a libsnappy.a)
add_executable(decompress decompress.cpp)
target_link_libraries(decompress libz.a liblz4.a libsnappy.a)
add_executable(pack_lz4hc pack_lz4hc.cpp)
target_link_libraries(pack_lz4hc libz.a liblz4.a libsnappy.a)
add_executable(unpack_lz4hc unpack_lz4hc.cpp)
target_link_libraries(unpack_lz4hc libz.a liblz4.a libsnappy.a)
